Move load-balancer to fizzy-staging-lb-01

--- a/config/deploy.staging.yml
+++ b/config/deploy.staging.yml
@@ -39,8 +39,7 @@ accessories:
 
   load-balancer:
     image: basecamp/kamal-proxy:lb
-    roles:
-      - web
+    host: fizzy-staging-lb-01
     options:
       publish:
         - 80:80
